--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "postcss-nested": "^5.0.6"
+    "postcss-nested": "^5.0.6",
+    "react-router-dom": "^6.0.1"
   }
 }
